# ip-labs-xplatform-starter

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/labs/: lab.hh  lab1.hh
include/util/: file-util.hh  image-util.hh
src/: main.cpp
src/labs/: lab.cpp  lab1.cpp
src/util/: file-util.cpp  image-util.cpp
